--- a/AddressBookApp/src/main/resources/application.properties
+++ b/AddressBookApp/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=AddressBookApp
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbookdb
+spring.datasource.username=root
+spring.datasource.password=AnshiPatel881@
+
+# JPA Hibernate Config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
